...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Travel App',
            style: TextStyle(fontWeight: FontWeight.bold)),
        centerTitle: true,
        backgroundColor: Colors.blueAccent,
      ),
      drawer: Drawer(
        child: ListView(
...
        ),
      ),
      body: Column(
        children: [
          Padding(
            padding: const EdgeInsets.all(16.0),
            child: Text('Upcoming Trips',
                style: TextStyle(fontSize: 22, fontWeight: FontWeight.bold)),
          ),
          if (trips.isNotEmpty)
            FeaturedTripCard(
                trip: trips[0]), // Display the next trip as featured
          Expanded(
...
